# valobq

./: .dockerignore  .env.local.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.market  README.md  docker-compose.yml  fly.market.toml  fly.toml  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml
docs/: ADICIONAR-POLYGON-KEY.md  ALTERNATIVAS-FOREX-GRATUITAS.md  ANALISE-DUPLICAR-LINHA-HORIZONTAL.md  ANALISE-PROBLEMA-ANIMACAO.md  ANALISE-TRADINGVIEW-ANIMACAO.md  API-FOREX-MELHORADA.md  APIS-FOREX-EXPLICACAO.md  CHAVE-API-ATUALIZADA.md  CONFIGURACAO_SUPABASE.md  CORRECAO-DUPLICAR-LINHA-HORIZONTAL.md  CORRECAO-FERRAMENTAS-LINHA-TRENDLINE-FIBONACCI.md  CORRECAO-RENDERIZACAO-FERRAMENTAS.md  CRYPTO-PARES-ADICIONADOS.md  DEBUG-TWELVEDATA.md  ENDPOINT-TWELVEDATA-CORRIGIDO.md  ESTUDO-FERRAMENTAS-GRAFICAS.md  FOREX-API-IMPLEMENTACAO.md  IMPLEMENTACAO-COMPLETA.md  IMPLEMENTACAO-DUPLICACAO-FERRAMENTAS.md  IMPLEMENTACAO-TWELVEDATA.md  MELHORIAS-IMPLEMENTADAS.md  O-QUE-MUDARA-COM-POLYGON.md  OPCOES-FOREX-GRATUITAS.md  ORIGEM-DADOS-CRYPTO.md  POLYGON-API-KEY-CORRETA.md  POLYGON-SETUP.md  PROBLEMA-AUTENTICACAO-POLYGON.md  PROBLEMA-CANDLES-HISTORICOS.md  PROBLEMA-POLYGON-ANALISE.md  PROBLEMA-TIMESTAMP-ANIMACAO.md  PROJECT-STATUS.md  RESUMO-API-MELHORADA.md  RESUMO-FOREX-REAL.md  RESUMO-IMPLEMENTACAO.md  RESUMO-POLYGON.md  ROTAS-EXISTENTES.md  SIMBOLOS-REMOVIDOS.md  SIMPLIFICACAO-FERRAMENTAS-GRAFICAS.md  SUPABASE-SETUP.md  TABELAS-BANCO-DADOS.md  (+29 more)
docs/analysis/: 01-html-structure.md  02-css-styles.md  (+5 more)
nginx/: nginx.conf
public/: manifest.json  sw.js
src/engine/wasm/: .gitignore  CMakeLists.txt  INSTALL.md  IndicatorsManager.ts  IndicatorsWasm.ts  README.md  build.sh
src/engine/wasm/include/: indicators.h
src/engine/wasm/src/: indicators.c
src/lib/: db.ts  (+2 more)
(+177 files in other folders)
